[gd_scene load_steps=8 format=3 uid="uid://cid1rniirc7tq"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_13kae"]
[ext_resource type="Texture2D" uid="uid://b75uhx0edst0s" path="res://spritz/health_bar/health_bar_sheet(6).png" id="2_d1q1x"]
[ext_resource type="Texture2D" uid="uid://cpacw7v2o8g8a" path="res://spritz/health_bar/health_bar_sheet(5).png" id="3_xbgjo"]
[ext_resource type="Texture2D" uid="uid://cstteqj4rinkx" path="res://spritz/health_bar/health_bar_sheet(4).png" id="4_kbmt5"]
[ext_resource type="Texture2D" uid="uid://by3ovwyc8a3tm" path="res://spritz/health_bar/health_bar_sheet(3).png" id="5_8t4vg"]
[ext_resource type="Texture2D" uid="uid://devovtlp1q33n" path="res://spritz/health_bar/health_bar_sheet(2).png" id="6_4ii17"]
[ext_resource type="Texture2D" uid="uid://ojkcnewxh8x5" path="res://spritz/health_bar/health_bar_sheet(1).png" id="7_5eatq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_13kae")

[node name="score_display" type="Label" parent="."]
offset_right = 283.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 15
text = "Score: 0
"

[node name="time_display" type="Label" parent="."]
offset_left = 2.0
offset_top = 16.0
offset_right = 340.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 15
text = "Zeit: 0s
"

[node name="survive_time" type="Timer" parent="."]

[node name="game_over" type="CanvasGroup" parent="."]

[node name="ColorRect" type="ColorRect" parent="game_over"]
modulate = Color(1, 1, 1, 0.666667)
offset_left = -8.0
offset_top = 129.0
offset_right = 866.0
offset_bottom = 297.0
color = Color(0.142256, 0.142256, 0.142256, 1)

[node name="Label" type="Label" parent="game_over"]
offset_left = 235.0
offset_top = 147.0
offset_right = 612.0
offset_bottom = 257.0
theme_override_colors/font_color = Color(0.592157, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="game_over"]
offset_left = 324.0
offset_top = 251.0
offset_right = 517.0
offset_bottom = 278.0

[node name="Label" type="Label" parent="game_over/Button"]
layout_mode = 0
offset_left = 58.0
offset_top = 1.0
offset_right = 125.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "respawn"

[node name="health_bar" type="CanvasGroup" parent="."]

[node name="6bars" type="Sprite2D" parent="health_bar"]
z_index = 8
position = Vector2(64, 427)
scale = Vector2(0.187, 0.187)
texture = ExtResource("2_d1q1x")

[node name="5bars" type="Sprite2D" parent="health_bar"]
z_index = 7
position = Vector2(64, 427)
scale = Vector2(0.187, 0.187)
texture = ExtResource("3_xbgjo")

[node name="4bars" type="Sprite2D" parent="health_bar"]
z_index = 6
position = Vector2(64, 427)
scale = Vector2(0.187, 0.187)
texture = ExtResource("4_kbmt5")

[node name="3bars" type="Sprite2D" parent="health_bar"]
z_index = 5
position = Vector2(64, 427)
scale = Vector2(0.187, 0.187)
texture = ExtResource("5_8t4vg")

[node name="2bars" type="Sprite2D" parent="health_bar"]
z_index = 4
position = Vector2(64, 427)
scale = Vector2(0.187, 0.187)
texture = ExtResource("6_4ii17")

[node name="1bars" type="Sprite2D" parent="health_bar"]
z_index = 3
position = Vector2(64, 427)
scale = Vector2(0.187075, 0.187075)
texture = ExtResource("7_5eatq")

[connection signal="timeout" from="survive_time" to="." method="_on_survive_time_timeout"]
[connection signal="pressed" from="game_over/Button" to="." method="_on_button_pressed"]
